--- a/Opdracht/frontend/index.html
+++ b/Opdracht/frontend/index.html
@@ -33,8 +33,8 @@
         <label for="todo2">Show current loc on map</label>
       </li>
       <li>
-        <input type="checkbox" id="todo3" disabled />
-        <label for="todo3">Use database</label>
+        <input type="checkbox" id="todo3" disabled checked />
+        <label for="todo3">Use database(file)</label>
       </li>
       <li>
         <input type="checkbox" id="todo4" disabled />
