--- a/Opdracht/frontend/index.html
+++ b/Opdracht/frontend/index.html
@@ -21,7 +21,10 @@
   <body>
     Geldersweert
     <br />
+    <!-- Ideas:
+  Timeline from left to right that shows the recent trips the feryr made(times under nodes, direction at edge)
 
+-->
     <h2>To Do</h2>
     <ul>
       <li>
@@ -37,12 +40,19 @@
         <label for="todo3">Use database(file)</label>
       </li>
       <li>
-        <input type="checkbox" id="todo4" disabled />
+        <input type="checkbox" id="todo4" disabled checked />
         <label for="todo4">Implement api</label>
       </li>
       <li>
         <input type="checkbox" id="todo5" disabled />
         <label for="todo5">Show stats</label>
+      </li>
+      <li>
+        <input type="checkbox" id="todo6" disabled />
+        <label for="todo6"
+          >Openingstijden (met kimaiapp, knop voor baas voor uit de vaart),
+          prijzen van pontkaart etc, tijdlijn van vaarten</label
+        >
       </li>
     </ul>
 
