implement first stat (ship status)

--- a/Opdracht/frontend/index.html
+++ b/Opdracht/frontend/index.html
@@ -88,7 +88,7 @@
             <p>Statistieken</p>
           </div>
           <div class="panel-content">
-            <div class="panel-content-row">
+            <div class="panel-content-row" data-stats-item="status">
               <p>Status</p>
               <p>TODO</p>
             </div>
