Implement login/logout

--- a/Opdracht/frontend/index.html
+++ b/Opdracht/frontend/index.html
@@ -25,12 +25,14 @@
       crossorigin="anonymous"
     ></script>
     <script type="module" src="src/map.js"></script>
-
+    <script type="module" src="src/login.js"></script>
     <script type="module" src="src/main.js"></script>
+    <script type="module" src="src/nav.js"></script>
+    <script type="module" src="src/modal.js"></script>
   </head>
   <body>
     <nav>
-      <div class="nav-left">
+      <div id="nav-left">
         <img
           class="nav-img"
           src="public/FerryLogoTrans.png"
@@ -39,10 +41,40 @@
         <span class="nav-title">Veerdienst Ingen-Elst</span>
         <span class="nav-subtitle">Kom over de brug, neem de pont</span>
       </div>
-      <div class="nav-right">
-        <a href="#statistics">tarieven</a>
-        <button>Login</button>
+      <div id="nav-right">
+        <a class="bluebutton" id="login-button">Login</a>
+        <a class="bluebutton" id="logout-button">Log out</a>
       </div>
+      <template id="modal-template">
+        <div class="modal">
+          <span class="modal-close"></span>
+          <div class="modal-content">
+            <template id="login-modal-template">
+              <h1 class="modal-title">Login</h1>
+              <form id="login-form" class="modal-form">
+                <label for="username">Gebruikersnaam</label>
+                <input
+                  placeholder="Vul uw gebruikersnaam in"
+                  type="text"
+                  id="username"
+                  name="username"
+                  required
+                />
+                <label for="password">Wachtwoord</label>
+                <input
+                  placeholder="Vul uw wachtwoord in"
+                  type="password"
+                  id="password"
+                  name="password"
+                  required
+                />
+                <span class="login-form-indicator"></span>
+                <button class="bluebutton" type="submit">Login</button>
+              </form>
+            </template>
+          </div>
+        </div>
+      </template>
     </nav>
 
     <!-- Ideas:
@@ -294,5 +326,8 @@
         </footer>
       </div>
     </div>
+    <template id="backdrop-template">
+      <div class="backdrop"></div>
+    </template>
   </body>
 </html>
