Implement stats and setup boss base

--- a/Opdracht/frontend/index.html
+++ b/Opdracht/frontend/index.html
@@ -29,6 +29,7 @@
     <script type="module" src="src/main.js"></script>
     <script type="module" src="src/nav.js"></script>
     <script type="module" src="src/modal.js"></script>
+    <script type="module" src="src/stats.js"></script>
   </head>
   <body>
     <nav>
@@ -128,19 +129,19 @@
               <p>Pont in vaart</p>
               <p>TODO</p>
             </div>
-            <div class="panel-content-row">
+            <div class="panel-content-row" data-stats-item="currentspeed">
               <p>Huidige snelheid</p>
               <p>TODO</p>
             </div>
-            <div class="panel-content-row">
+            <div class="panel-content-row" data-stats-item="avgspeed">
               <p>Gem. snelheid (24u)</p>
               <p>TODO</p>
             </div>
-            <div class="panel-content-row">
+            <div class="panel-content-row" data-stats-item="crossings">
               <p>Overtochten afgelopen uur</p>
               <p>TODO</p>
             </div>
-            <div class="panel-content-row">
+            <div class="panel-content-row" data-stats-item="lastupdate">
               <p>Laatste update</p>
               <p>TODO</p>
             </div>
