--- a/Opdracht/frontend/boss/index.html
+++ b/Opdracht/frontend/boss/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/public/FerryLogoOpaque.png" />
+    <link rel="icon" type="image/png" href="/FerryLogoOpaque.png" />
     <link rel="stylesheet" type="text/css" href="/style.css" />
     <meta name="description" content="Veerdienst Ingen-Elst" />
     <meta
@@ -34,7 +34,7 @@
       <div id="nav-left">
         <img
           class="nav-img"
-          src="public/FerryLogoTrans.png"
+          src="/FerryLogoTrans.png"
           alt="Geldersweert logo"
         />
         <span class="nav-title">Veerdienst Ingen-Elst</span>
@@ -42,7 +42,7 @@
       </div>
       <div id="nav-right">
         <a class="bluebutton" id="login-button">Login</a>
-        <a class="bluebutton" id="logout-button">Log out</a>
+        <a class="bluebutton hidden" id="logout-button">Log out</a>
       </div>
       <template id="modal-template">
         <div class="modal">
