--- a/Opdracht/frontend/index.html
+++ b/Opdracht/frontend/index.html
@@ -43,8 +43,10 @@
         <span class="nav-subtitle">Kom over de brug, neem de pont</span>
       </div>
       <div id="nav-right">
+        <a class="bluebutton hidden" id="rooster-button">Rooster</a>
+        <a class="bluebutton hidden" id="drukte-button">Drukte</a>
         <a class="bluebutton" id="login-button">Login</a>
-        <a class="bluebutton" id="logout-button">Log out</a>
+        <a class="bluebutton hidden" id="logout-button">Log out</a>
       </div>
       <template id="modal-template">
         <div class="modal">
