rooster add/delete working completely

--- a/Opdracht/frontend/index.html
+++ b/Opdracht/frontend/index.html
@@ -34,11 +34,12 @@
   <body>
     <nav>
       <div id="nav-left">
-        <img
-          class="nav-img"
-          src="public/FerryLogoTrans.png"
-          alt="Geldersweert logo"
-        />
+        <a href="/index.html"
+          ><img
+            class="nav-img"
+            src="public/FerryLogoTrans.png"
+            alt="Geldersweert logo"
+        /></a>
         <span class="nav-title">Veerdienst Ingen-Elst</span>
         <span class="nav-subtitle">Kom over de brug, neem de pont</span>
       </div>
