implement drukte indicator on index

--- a/Opdracht/frontend/index.html
+++ b/Opdracht/frontend/index.html
@@ -148,7 +148,7 @@
               <p>Laatste update</p>
               <p>TODO</p>
             </div>
-            <div class="panel-content-row">
+            <div class="panel-content-row" data-stats-item="drukte">
               <p>Drukte</p>
               <p>TODO</p>
             </div>
