--- a/Opdracht/frontend/index.html
+++ b/Opdracht/frontend/index.html
@@ -12,14 +12,15 @@
     <meta name="author" content="Vincent van Setten" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Veerdienst Ingen-Elst | Home</title>
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/ol@v8.2.0/ol.css"
     />
     <script
       src="https://cdn.jsdelivr.net/npm/ol@v8.2.0/dist/ol.js"
       defer
-    ></script>
+    ></script> -->
+    <link rel="stylesheet" href="node_modules/ol/ol.css" />
     <script
       src="https://kit.fontawesome.com/67f6f13cd8.js"
       crossorigin="anonymous"
@@ -152,7 +153,7 @@
               <p>Drukte</p>
               <p>TODO</p>
             </div>
-            <div class="panel-content-row">
+            <div class="panel-content-row" data-stats-item="eta">
               <p>Verwachte Aankomsttijd</p>
               <p>TODO</p>
             </div>
