--- a/Opdracht/frontend/index.html
+++ b/Opdracht/frontend/index.html
@@ -129,7 +129,7 @@
               <p>Status</p>
               <p>TODO</p>
             </div>
-            <div class="panel-content-row">
+            <div class="panel-content-row" data-stats-item="isopen">
               <p>Pont in vaart</p>
               <p>TODO</p>
             </div>
