--- a/Opdracht/frontend/index.html
+++ b/Opdracht/frontend/index.html
@@ -127,35 +127,35 @@
           <div class="panel-content">
             <div class="panel-content-row" data-stats-item="status">
               <p>Status</p>
-              <p>TODO</p>
+              <p>loading...</p>
             </div>
             <div class="panel-content-row" data-stats-item="isopen">
               <p>Pont in vaart</p>
-              <p>TODO</p>
+              <p>loading...</p>
             </div>
             <div class="panel-content-row" data-stats-item="currentspeed">
               <p>Huidige snelheid</p>
-              <p>TODO</p>
+              <p>loading...</p>
             </div>
             <div class="panel-content-row" data-stats-item="avgspeed">
               <p>Gem. snelheid (24u)</p>
-              <p>TODO</p>
+              <p>loading...</p>
             </div>
             <div class="panel-content-row" data-stats-item="crossings">
               <p>Overtochten afgelopen uur</p>
-              <p>TODO</p>
+              <p>loading...</p>
             </div>
             <div class="panel-content-row" data-stats-item="lastupdate">
               <p>Laatste update</p>
-              <p>TODO</p>
+              <p>loading...</p>
             </div>
             <div class="panel-content-row" data-stats-item="drukte">
               <p>Drukte</p>
-              <p>TODO</p>
+              <p>loading...</p>
             </div>
             <div class="panel-content-row" data-stats-item="eta">
               <p>Verwachte Aankomsttijd</p>
-              <p>TODO</p>
+              <p>loading...</p>
             </div>
           </div>
         </div>
