--- a/Opdracht/frontend/drukte/skipper/index.html
+++ b/Opdracht/frontend/drukte/skipper/index.html
@@ -105,6 +105,7 @@
                 <input type="radio" id="drukte-4" name="drukte" value="4" />
               </li>
             </ul>
+            <span id="drukte-status-indicator"></span>
             <button class="bluebutton" type="submit">Verstuur</button>
           </form>
         </div>
