--- a/Opdracht/frontend/rooster/boss/index.html
+++ b/Opdracht/frontend/rooster/boss/index.html
@@ -42,6 +42,10 @@
         <span class="nav-title">Veerdienst Ingen-Elst</span>
         <span class="nav-subtitle">Kom over de brug, neem de pont</span>
       </div>
+      <input id="menu-toggle" type="checkbox" />
+      <label class="menu-button-container" for="menu-toggle">
+        <div class="menu-button"></div
+      ></label>
       <div id="nav-right">
         <a class="bluebutton hidden" id="rooster-button">Rooster</a>
         <a class="bluebutton hidden" id="drukte-button">Drukte</a>
