add max speed and fix units

--- a/Opdracht/frontend/index.html
+++ b/Opdracht/frontend/index.html
@@ -86,41 +86,6 @@
       </template>
     </nav>
 
-    <!-- Ideas:
-  Timeline from left to right that shows the recent trips the feryr made(times under nodes, direction at edge)
-
--->
-    <!-- <h2>To Do</h2>
-    <ul>
-      <li>
-        <input type="checkbox" id="todo1" disabled checked />
-        <label for="todo1">Read from aisstream api</label>
-      </li>
-      <li>
-        <input type="checkbox" id="todo2" disabled checked />
-        <label for="todo2">Show current loc on map</label>
-      </li>
-      <li>
-        <input type="checkbox" id="todo3" disabled checked />
-        <label for="todo3">Use database(file)</label>
-      </li>
-      <li>
-        <input type="checkbox" id="todo4" disabled checked />
-        <label for="todo4">Implement api</label>
-      </li>
-      <li>
-        <input type="checkbox" id="todo5" disabled />
-        <label for="todo5">Show stats</label>
-      </li>
-      <li>
-        <input type="checkbox" id="todo6" disabled />
-        <label for="todo6"
-          >Openingstijden (met kimaiapp, knop voor baas voor uit de vaart),
-          prijzen van pontkaart etc, tijdlijn van vaarten</label
-        >
-      </li>
-    </ul> -->
-
     <div class="content-wrapper">
       <div class="row">
         <div id="map"></div>
@@ -143,6 +108,10 @@
             </div>
             <div class="panel-content-row" data-stats-item="avgspeed">
               <p>Gem. snelheid (24u)</p>
+              <p>loading...</p>
+            </div>
+            <div class="panel-content-row" data-stats-item="maxspeed">
+              <p>Max. snelheid (24u)</p>
               <p>loading...</p>
             </div>
             <div class="panel-content-row" data-stats-item="crossings">
